--- a/src/pages/Home/home.less
+++ b/src/pages/Home/home.less
@@ -1,9 +1,9 @@
-.home-box {
+.homeBox {
     padding: 17px 0 0 20px;
     .line {
         border-bottom: 1px solid #E9E9E9;
     }
-    .title-box {
+    .titleBox {
         overflow: hidden;
       
     }
@@ -14,12 +14,44 @@
         color: #595959;
       
     }
-    .form-box {
+    .formBox {
         width: 100%;
         margin: 16px 0;
         overflow: hidden;
     }
-    .table-box {
+    .tableBox {
         margin-top: 16px;
+        margin-right: 30px;
     }
+    .mdName {
+        width: 100%;
+        margin: 16px 0;
+    }
+    :global { 
+        .ant-table-thead > tr > th {
+            padding: 6px 16px;
+            background-color: #f9f9f9;
+            text-align: center;
+        }
+        .ant-table-tbody > tr {
+            &:nth-child(odd) {
+                background-color: #f9f9f9;
+            }
+        }
+        .ant-table-tbody > tr > td {
+            padding: 6px 16px;
+        }
+        .ant-pagination-item-active {
+            background: #A4BFD5;
+            border-color: #A4BFD5;
+            a {
+            color: #FFFFFF;
+    
+            }
+        }
+        .ant-picker-range {
+            width: 100%;
+        }
+    }
+
 }
